--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
@@ -158,9 +158,10 @@
 																	</tr>
 										</table>
 										
-										<table width="60%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
-										      <p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.loadingDetails}</b></font></p>         
-										           <table>
+										<table>
+										     <tr>
+											 <p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><u><b>${ctx.messages.loadingDetails}</b></u></font></p> </tr>        
+										           
 										                <tr>
 										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerHeight} :</b></font></p></td>
 										                               <td valign="top">&nbsp;</td>
@@ -187,30 +188,10 @@
 																		#end
 										                </tr>
 										                
-										           </table>
-										      <p><font color="blue" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.disclaimer}</b></font></p>
+										           
 										</table>
-										<!--<table>
 										
-										                     
-										                     		<tr>
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerHeight}:</b></font></p></td>
-																		<td valign="top">&nbsp;</td>
-																		#if ($ctx.order.containerHeight)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerHeight}</b></font></p></td>
-																		#end
-																	</tr>
-																	<tr>
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerPackingType}:</b></font></p></td>
-																		<td valign="top">&nbsp;</td>
-																		#if ($ctx.order.containerPackingType)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerPackingType}</b></font></p></td>
-																		#end
-																	</tr>
-										</table>-->
-										
-										
-										
+										<p><font color="blue" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.disclaimer}</b></font></p>
 										
 										#if ($!ctx.order.purchaseOrderNumber)
 										<!--<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
