--- a/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
+++ b/bin/custom/energizer/energizercore/resources/energizercore/import/contentCatalogs/personalCareContentCatalog/emails/email-orderConfirmationBody.vm
@@ -166,12 +166,13 @@
 										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerHeight} :</b></font></p></td>
 										                               <td valign="top">&nbsp;</td>
 																		#if ($ctx.order.containerHeight)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerHeight}</b></font></p></td>
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.order.containerHeight}</font></p></td>
 																		#end
+																		<td valign="top">&nbsp;</td>
 										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.fullPallets} :</b></font></p></td>
 										                                <td valign="top">&nbsp;</td>
 																		#if ($ctx.order.totalPalletCount)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.totalPalletCount}</b></font></p></td>
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.order.totalPalletCount}</font></p></td>
 																		#end
 										                </tr>
 										                
@@ -179,19 +180,20 @@
 										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.containerPackingType} :</b></font></p></td>
 										                               <td valign="top">&nbsp;</td>
 																		#if ($ctx.order.containerPackingType)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.containerPackingType}</b></font></p></td>
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.order.containerPackingType}</font></p></td>
 																		#end
+																		<td valign="top">&nbsp;</td>
 										                    <td><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.partialPallets} :</b></font></p></td>
 										                               <td valign="top">&nbsp;</td>
 																		#if ($ctx.order.partialPalletCount)
-																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.order.partialPalletCount}</b></font></p></td>
+																		<td valign="top"><p><font color="#666666" size="2" face="Arial, Helvetica, sans-serif">${ctx.order.partialPalletCount}</font></p></td>
 																		#end
 										                </tr>
 										                
 										           
 										</table>
 										
-										<p><font color="blue" size="2" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.disclaimer}</b></font></p>
+										<p><font color="blue" size="1" face="Arial, Helvetica, sans-serif"><b>${ctx.messages.disclaimer}</b></font></p>
 										
 										#if ($!ctx.order.purchaseOrderNumber)
 										<!--<table width="100%" border="1" align="center" cellpadding="0" cellspacing="0" bordercolor="#bfc1c0">
